Fixed margin issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.mt-n3 {
+  margin-top: -1rem !important;
+}
